// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSearchResults rendering should filter external monumenten on pand results 1`] = `
<section
  className="map-search-results"
>
  <header
    className="
          map-search-results__header
          map-search-results__header--no-pano
        "
  >
    <Styled(Link)
      as="div"
      title="Geen Panoramabeeld beschikbaar"
      to={null}
    >
      <div
        className="map-search-results__header-container"
      >
        <h1
          className="map-search-results__header-title"
        >
          Resultaten
        </h1>
        <h2
          className="map-search-results__header-subtitle"
        >
          locatie 1.12, 654.32
        </h2>
      </div>
    </Styled(Link)>
  </header>
  <div
    className="map-search-results__scroll-wrapper"
  >
    <ul
      className="map-search-results__list"
    >
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-1",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "foo",
            "uri": "result-uri-2",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "monumenten/monument",
            "uri": "result-uri-3",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapSearchResults rendering should render empty results 1`] = `
<section
  className="map-search-results"
>
  <header
    className="
          map-search-results__header
          map-search-results__header--no-pano
        "
  >
    <Styled(Link)
      as="div"
      title="Geen Panoramabeeld beschikbaar"
      to={null}
    >
      <div
        className="map-search-results__header-container"
      >
        <h1
          className="map-search-results__header-title"
        >
          Resultaten
        </h1>
        <h2
          className="map-search-results__header-subtitle"
        >
          locatie 1.12, 654.32
        </h2>
      </div>
    </Styled(Link)>
  </header>
  <div
    className="map-search-results__scroll-wrapper"
  >
    <ul
      className="map-search-results__list"
    />
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapSearchResults rendering should render results 1`] = `
<section
  className="map-search-results"
>
  <header
    className="
          map-search-results__header
          map-search-results__header--no-pano
        "
  >
    <Styled(Link)
      as="div"
      title="Geen Panoramabeeld beschikbaar"
      to={null}
    >
      <div
        className="map-search-results__header-container"
      >
        <h1
          className="map-search-results__header-title"
        >
          Resultaten
        </h1>
        <h2
          className="map-search-results__header-subtitle"
        >
          locatie 1.12, 654.32
        </h2>
      </div>
    </Styled(Link)>
  </header>
  <div
    className="map-search-results__scroll-wrapper"
  >
    <ul
      className="map-search-results__list"
    >
      <li>
        <Alert
          compact={true}
          dismissible={true}
          level="attention"
        >
          Geen details beschikbaar van: Layer 1, Layer 2
        </Alert>
      </li>
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "monumenten/monument",
            "uri": "result-uri-1",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "monumenten/monument",
            "uri": "result-uri-2",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapSearchResults rendering should update results 1`] = `
<section
  className="map-search-results"
>
  <header
    className="
          map-search-results__header
          map-search-results__header--no-pano
        "
  >
    <Styled(Link)
      as="div"
      title="Geen Panoramabeeld beschikbaar"
      to={null}
    >
      <div
        className="map-search-results__header-container"
      >
        <h1
          className="map-search-results__header-title"
        >
          Resultaten
        </h1>
        <h2
          className="map-search-results__header-subtitle"
        >
          locatie 1.12, 654.32
        </h2>
      </div>
    </Styled(Link)>
  </header>
  <div
    className="map-search-results__scroll-wrapper"
  >
    <ul
      className="map-search-results__list"
    >
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-1",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-2",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapSearchResults rendering should update results 2`] = `
<section
  className="map-search-results"
>
  <header
    className="
          map-search-results__header
          map-search-results__header--no-pano
        "
  >
    <Styled(Link)
      as="div"
      title="Geen Panoramabeeld beschikbaar"
      to={null}
    >
      <div
        className="map-search-results__header-container"
      >
        <h1
          className="map-search-results__header-title"
        >
          Resultaten
        </h1>
        <h2
          className="map-search-results__header-subtitle"
        >
          locatie 1.12, 654.32
        </h2>
      </div>
    </Styled(Link)>
  </header>
  <div
    className="map-search-results__scroll-wrapper"
  >
    <ul
      className="map-search-results__list"
    >
      <li>
        <Alert
          compact={true}
          dismissible={true}
          level="attention"
        >
          Geen details beschikbaar van: Layer 3
        </Alert>
      </li>
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-1",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-2",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
      <MapSearchResultsCategory
        category={
          Object {
            "categoryLabel": "category",
            "label": "label",
            "results": Array [],
            "showMore": false,
            "subCategories": Array [],
            "type": "bag/pand",
            "uri": "result-uri-3",
          }
        }
        isSubcategory={false}
        key="category"
        onItemClick={[MockFunction]}
        onShowMoreClick={[MockFunction]}
      />
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;
